[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/HUD/BodyInformation/BodyInformation.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/HUD/HUD.gd" type="Script" id=2]
[ext_resource path="res://Scenes/HUD/Quickslots/Quickslots.tscn" type="PackedScene" id=3]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 1016.0
margin_bottom = 592.0

[node name="TopLeft" type="Control" parent="MarginContainer/Control"]
margin_right = 1008.0
margin_bottom = 584.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BodyInformation" parent="MarginContainer/Control/TopLeft" instance=ExtResource( 1 )]
anchor_right = 0.5

[node name="CenterBottom" type="Control" parent="MarginContainer/Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -504.0
margin_top = -584.0
margin_right = 504.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quickslots" parent="MarginContainer/Control/CenterBottom" instance=ExtResource( 3 )]
